# flock-windows

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
src/: agent-cli.ts  command-palette.ts  find-bar.ts  grid-layout.ts  index.html  keys.ts  main.ts  pane-manager.ts  status-bar.ts  styles.css  tab-bar.ts  terminal-pane.ts  theme.ts  themes.ts  update-checker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_cli.rs  claude_state.rs  main.rs  pane.rs  pty.rs  stream_json.rs  tray.rs
